--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=demo
 server.port=8091
-spring.datasource.url=jdbc:postgresql://localhost:5432/library_db
+spring.datasource.url=jdbc:postgresql://localhost:5432/library_db2
 spring.datasource.username=admin
 spring.datasource.password=hello88sharky
 spring.datasource.driver-class-name=org.postgresql.Driver
